chore - update environment configuration, enhance dev scripts, and improve Telegram bot functionality
- Changed default server port from 4000 to 8008 in .env.example.
- Updated .gitignore to include new directories and file types.
- Refactored package.json scripts for better development experience, adding concurrent execution for frontend and bot.
- Added new README sections for quick start and project status.
- Replaced TelegramLogin component with TelegramVerification for improved user verification flow.
- Introduced new debug page for testing URL parameters.
- Removed deprecated PermissionManager and TelegramLogin components.
- Added comprehensive tests for bot functionality and improved error handling in the bot's routing logic.
- Enhanced backend API routes for user verification and permissions management.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "dev:frontend": "pnpm --filter frontend dev",
     "dev:tg-bot": "pnpm --filter tg-bot dev",
-    "dev": "pnpm dev:frontend & pnpm dev:tg-bot",
+    "dev:all": "concurrently -n \"frontend,bot\" -c \"blue,green\" \"pnpm dev:frontend\" \"pnpm dev:tg-bot\"",
+    "dev": "node scripts/dev-simple.js",
+    "dev:ngrok": "node scripts/dev-with-ngrok.js",
+    "dev:no-ngrok": "pnpm dev:all",
     "build:frontend": "pnpm --filter frontend build",
     "build:tg-bot": "pnpm --filter tg-bot build",
-    "build": "pnpm -r build"
+    "build": "pnpm -r build",
+    "test": "pnpm -r test",
+    "test:bot": "cd apps/tg-bot && ./tests/run-all-tests.sh"
   },
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "typescript": "^5.6.3"
   }
 }
