--- a/apps/tg-bot/package.json
+++ b/apps/tg-bot/package.json
@@ -9,17 +9,19 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.21.1",
-    "telegraf": "^4.16.3",
+    "@opencode-ai/plugin": "^1.0.68",
     "cors": "^2.8.5",
-    "viem": "^2.21.58",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "openai": "^6.9.0",
+    "telegraf": "^4.16.3",
+    "viem": "^2.21.58",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/express": "^5.0.0",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
