feat - implement signature handling and enhance Telegram bot functionality
- Added a new signature.ts file to define the signature constant.
- Created a TestSigning component for testing message signing in the frontend.
- Updated TelegramVerification component to allow for both EOA and smart wallet signature formats.
- Introduced a comprehensive architecture document for the RISE Telegram Bot.
- Refactored backend services for transaction and swap handling, including new backend transaction and swap services.
- Implemented various tests for backend functionality, including session key signing and wallet verification.
- Enhanced error handling and logging throughout the bot's services and routes.

--- a/apps/tg-bot/package.json
+++ b/apps/tg-bot/package.json
@@ -5,17 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsx build src/index.ts --outdir dist",
-    "start": "node dist/index.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "test:signature": "npx tsx tests/test-smart-wallet-verification.ts",
+    "test:real-signature": "npx tsx tests/test-real-signature.ts",
+    "test:end-to-end": "npx tsx tests/test-end-to-end-flow.ts",
+    "test:parse-signature": "npx tsx tests/parse-signature.ts"
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.0.68",
+    "@tanstack/react-query": "^5.90.10",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "openai": "^6.9.0",
+    "ox": "^0.9.14",
+    "rise-wallet": "^0.2.29",
     "telegraf": "^4.16.3",
     "viem": "^2.21.58",
+    "wagmi": "^2.19.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
