--- a/apps/tg-bot/package.json
+++ b/apps/tg-bot/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "test": "vitest",
     "test:signature": "npx tsx tests/test-smart-wallet-verification.ts",
     "test:real-signature": "npx tsx tests/test-real-signature.ts",
     "test:end-to-end": "npx tsx tests/test-end-to-end-flow.ts",
@@ -31,6 +32,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^4.0.13"
   }
 }
