feat - update frontend dependencies and enhance UI components
- Added new dependencies including '@radix-ui/react-slot', 'class-variance-authority', and 'tw-animate-css' to improve UI functionality and animations.
- Updated existing components such as Button, Card, and Switch to utilize new styling and functionality.
- Introduced global CSS keyframes and base styles for better theming and animation support.
- Created a new shared package for common contracts and utilities to streamline code reuse across applications.
- Enhanced permission management in the frontend by integrating shared contract functionalities.

--- a/apps/tg-bot/package.json
+++ b/apps/tg-bot/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.0.68",
+    "@rise-bot/shared": "file:../shared",
     "@tanstack/react-query": "^5.90.10",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
