--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "@rise-bot/shared": "file:../shared",
     "@tanstack/react-query": "^5.62.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "next": "16.0.3",
@@ -21,6 +24,7 @@
     "react-dom": "19.2.0",
     "rise-wallet": "^0.2.29",
     "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.4.0",
     "viem": "^2.38.3",
     "wagmi": "^2.18.1"
   },
