feat - integrate @tailwindcss/container-queries and update shared package structure
- Added '@tailwindcss/container-queries' to enhance responsive design capabilities in the frontend.
- Created a new Tailwind CSS configuration file to support container queries.
- Updated package.json files to include TypeScript as a devDependency in the shared package.
- Refactored exports in shared contracts to improve module resolution and maintainability.
- Adjusted TypeScript configuration for better compatibility with ESNext modules.

--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -1,14 +1,26 @@
 {
   "name": "@rise-bot/shared",
   "version": "1.0.0",
-  "type": "module",
-  "main": "./contracts/index.ts",
+  "main": "./dist/contracts/index.js",
+  "types": "./dist/contracts/index.d.ts",
   "exports": {
-    "./contracts": "./contracts/index.ts",
-    "./contracts/registry": "./contracts/registry.ts",
-    "./contracts/permissionBuilder": "./contracts/permissionBuilder.ts"
+    ".": {
+      "types": "./dist/contracts/index.d.ts",
+      "default": "./dist/contracts/index.js"
+    },
+    "./contracts": {
+      "types": "./dist/contracts/index.d.ts", 
+      "default": "./dist/contracts/index.js"
+    }
+  },
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "viem": "^2.21.51"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
