--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,7 +22,7 @@
     "ox": "^0.9.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "rise-wallet": "^0.2.29",
+    "rise-wallet": "0.2.29-1",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
     "viem": "^2.38.3",
