chore - update package dependencies and clean up frontend component
- Added 'tsx' as a devDependency in package.json for improved TypeScript support.
- Introduced a new script 'generate-key' for key generation in the package.json.
- Removed the debug toggle for manual signing in the TelegramVerification component to streamline the UI.
- Updated pnpm-lock.yaml to reflect the new dependencies and versions.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "build:tg-bot": "pnpm --filter tg-bot build",
     "build": "pnpm -r build",
     "test": "pnpm -r test",
-    "test:bot": "cd apps/tg-bot && ./tests/run-all-tests.sh"
+    "test:bot": "cd apps/tg-bot && ./tests/run-all-tests.sh",
+    "generate-key": "tsx scripts/generate-p256-key.ts"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3"
   }
 }
