--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "concurrently": "^9.2.1",
     "tsx": "^4.21.0",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "ox": "^0.10.5",
+    "rise-wallet": "^0.3.0"
   }
 }
