--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,7 +8,7 @@
     "dev:http": "next dev",
     "dev:https": "next dev --experimental-https --experimental-https-key ./certs/localhost-key.pem --experimental-https-cert ./certs/localhost.pem",
     "build": "next build",
-    "start": "next start",
+    "start": "nepxt start",
     "lint": "eslint"
   },
   "dependencies": {
