--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rise-tg-bot-monorepo",
   "private": true,
   "scripts": {
-    "dev:frontend": "pnpm --filter frontend dev",
+    "dev:frontend": "pnpm --filter frontend dev --experimental-https",
     "dev:tg-bot": "pnpm --filter tg-bot dev",
     "dev:all": "concurrently -n \"frontend,bot\" -c \"blue,green\" \"pnpm dev:frontend\" \"pnpm dev:tg-bot\"",
     "dev": "node scripts/dev-simple.js",
